# small

./: .clang-format  404.html  CMakeLists.txt  LICENSE  README.md  find_cpp_modules.cmake  index.html  mkdocs.yml  sitemap.xml
.github/ISSUE_TEMPLATE/: feature-request.md
.github/workflows/: build.yml  docs.yml
cmake/functions/: all.cmake  cpp_modules.cmake  link_external_libraries.cmake  project_flags.cmake  semver.cmake  target_options.cmake
cmake/small/: cpp_modules.cmake  dependencies.cmake  dev-options.cmake  in_source_guard.cmake  semver.cmake  variables.cmake
contributing/contributors/: index.html
contributing/get-involved/: index.html
contributing/guidelines/: index.html
contributing/ideas-and-roadmap/: index.html
dev-tools/: CMakeLists.txt
dev-tools/linter/: CMakeLists.txt  main.cpp
docs/: .gitignore  CMakeLists.txt  Doxyfile  contributing.md  index.md  macros.py  quickstart.md  references.md  sets_and_maps.md  strings.md  vectors.md
docs/.doxybook/: config.json
docs/.doxybook/templates/: breadcrumbs.tmpl  class_members_details.tmpl  class_members_inherited_tables.tmpl  class_members_tables.tmpl  details.tmpl  footer.tmpl  header.tmpl  kind_class.tmpl  kind_file.tmpl  kind_group.tmpl  kind_nonclass.tmpl  member_details.tmpl  merged_overload_details.tmpl  nonclass_members_details.tmpl  nonclass_members_tables.tmpl
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
examples/: CMakeLists.txt  associative.cpp  default_inline_storage.cpp  main.cpp  unicode_strings.cpp
include/small/: string.hpp  vector.hpp
include/small/detail/algorithm/: utf.hpp
include/small/detail/container/: associative_vector.hpp  lookup_table_view.hpp  span-lite.hpp  variant_vector.hpp
include/small/detail/exception/: scope_guard.hpp
include/small/detail/iterator/: codepoint_iterator.hpp  pointer_wrapper.hpp
include/small/detail/traits/: enable_allocator_from_this.hpp  strong_type.hpp
quickstart/: index.html
references/: index.html
search/: search_index.json
sets-and-maps/: index.html
source/: CMakeLists.txt
source/small/: map.h  queue.h  set.h  stack.h  string.h  vector.h
source/small/detail/algorithm/: console_unicode_guard.h  intcmp.h  leading_zeros.h  shift.h  strlen.h  to_unsigned.h  utf.h
source/small/detail/container/: aligned_storage_vector.h  associative_vector.h  lookup_table_view.h  max_size_map.h  span-lite.h  variant_vector.h
source/small/detail/exception/: scope_guard.h  throw.h
source/small/detail/iterator/: codepoint_iterator.h  const_key_iterator.h  iterator_type_traits.h  ordered_concat_iterator.h  pointer_wrapper.h
source/small/detail/traits/: add_key_const.h  cpp_version.h  default_inline_storage.h  enable_allocator_from_this.h  extract_value_type.h  has_allocator.h  hedley.h  is_pair.h  is_range.h  is_relocatable.h  little_endian.h  strong_type.h
strings/: index.html
test/unit/: CMakeLists.txt  small_map.cpp  small_set.cpp  small_string_access.cpp  small_string_non_member.cpp  string_small_vector.cpp  unicode_functions.cpp
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  catch_main.cpp  custom_small_vector.cpp  pod_small_vector.cpp  ptr_wrapper.cpp  small_map.cpp  small_set.cpp  small_string.cpp  small_string_access.cpp  small_string_const_algorithms.cpp  small_string_make.cpp  small_string_modify.cpp  small_string_modify_algorithms.cpp  small_string_non_member.cpp  small_vector.cpp  string_small_vector.cpp  unicode_functions.cpp
vectors/: index.html
